[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Sprites/Objects/TinyMissile.png" type="Texture" id=1]
[ext_resource path="res://src/enemyobjects/MiniMissile.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28, 28 )

[node name="MiniMissile" type="Area2D"]
collision_layer = 32
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ExplosionColl" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_MiniMissile_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_MiniMissile_body_entered"]
